2007-06-15  Cody Russell  <bratsche@gnome.org>

	* docs/reference/gobject/tmpl/gboxed.sgml:
	* docs/reference/gobject/gobject-sections.txt:
	* glib/gregex.c:
	* gobject/gboxed.[ch]:
	* gobject/gobject.symbols: Added GRegex boxed type.
	(#445065, Carlos Garnacho)

2007-06-15  Sebastian Wilhelmi  <wilhelmi@google.com>

	* glib/gregex.c: Replaced & by &amp; in <programlisting> to make
	gtk-doc happy.

2007-06-14  Ryan Lortie  <desrt@desrt.ca>

	* docs/reference/glib/glib-sections.txt:
	* glib/glib/symbols:
	* glib/gstring.[ch] (g_string_printf_internal): Improve
	performance by removing the use of an intermediate g_malloc'd
	buffer.  Rename to g_string_append_vprintf, document, and expose
	along with g_string_vprintf as new public API (#57693).

2007-06-15  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* build, tests/string-test.c, glib/glib.symbols, 
	glib/gstring.c, glib/gstring.h: Introduce g_string_overwrite(_len)?
	for overwriting parts of strings (#368686, Samuel Cormier-Iijima)

2007-06-14  Cody Russell  <bratsche@gnome.org>

	* gobject/gtype.c (g_type_class_add_private): Check for 0-sized
	private data. (#443869)

2007-06-14  Matthias Clasen  <mclasen@redhat.com>
	
	* glib/gmain.c (g_timeout_add_seconds): Fix doc typos.  (#447534,
	Vincent Untz)

2007-06-13  Behdad Esfahbod  <behdad@gnome.org>

	* glib/pltcheck.sh: Whitelist g_atomic_{int,pointer}_[gs]et() as
	we don't alias them intentionally. (#354522)

2007-06-13  Sven Neumann  <sven@gimp.org>

	* glib/gslice.[ch] added g_slice_copy() and g_slice_dup() (#442029).

	* glib/glib.symbols: updated.

2007-06-12  Behdad Esfahbod  <behdad@gnome.org>

	* glib/gunicode.h: Add more G_GNUC_CONST and G_GNUC_PURE.

2007-06-11  Emmanuele Bassi  <ebassi@gnome.org>

	* glib/gutils.c (maybe_expire_user_special_dirs),
	(g_get_user_special_dir): Remove the cache expiration logic: it
	makes g_get_user_special_dir() not thread-safe. Document the fact
	that on some platform the value might be changed by the user and